--- a/gb/1/2/12/n46503.md
+++ b/gb/1/2/12/n46503.md
@@ -6,45 +6,45 @@
 <hr>
 	<p>【大纪元2月12日电】汉城消息 最近几天来，围绕着《围棋月刊》主编郑容镇与不败少年李世石之间的纠葛，韩国棋界一直在争吵不休。</p>
 <p>　　到目前为止，只有两名职业棋手对此发表了自己的看法，一位是和李世石私交甚好的韩国棋院的围棋博士文容植四段，另一位则是李世石的哥哥李相勋三段。由于两人的特殊身份，他们的发言无疑具有证词的作用，一时间，反对郑容镇的呼声高涨了起来。</p>
-<p>　　首先站出来的是文容植四段。2月3日，在看了《围棋月刊》的报道及网上的<ahref=http://www3.epochtimes.com/news/epochnews/main/8.md#1><font color=blue>评论</font></A>后，文博士愤笔写下了《为后辈名誉书》，“是谁在加害别人？又是谁受到了伤害？”在这篇饱含激情的檄文中，文容植一针见血地指出了郑容镇的破绽，他认为郑是有明显的个人感情色彩在内。文容植指责郑容镇：“为什么不在文章中写出自己对李昌镐和曹薰铉等人的看法？而要借助柳时薰的话？据我所知，郑所指出的棋坛存在的这种现象以前就有很多，他为什么就从没报过呢？”文容植认为郑的出发点本身就有问题。文容植从自己对李世石的了解逐一对郑容镇的文章展开了批驳，他最终得出的结论是郑容镇是怀有某种私人目的写出那篇文章的。</p>
+<p>　　首先站出来的是文容植四段。2月3日，在看了《围棋月刊》的报道及网上的<font color="blue">评论</font>后，文博士愤笔写下了《为后辈名誉书》，“是谁在加害别人？又是谁受到了伤害？”在这篇饱含激情的檄文中，文容植一针见血地指出了郑容镇的破绽，他认为郑是有明显的个人感情色彩在内。文容植指责郑容镇：“为什么不在文章中写出自己对李昌镐和曹薰铉等人的看法？而要借助柳时薰的话？据我所知，郑所指出的棋坛存在的这种现象以前就有很多，他为什么就从没报过呢？”文容植认为郑的出发点本身就有问题。文容植从自己对李世石的了解逐一对郑容镇的文章展开了批驳，他最终得出的结论是郑容镇是怀有某种私人目的写出那篇文章的。</p>
 <p>　　但网上的争论还在继续，文容植的文章并没能压倒指责李世石的声音。终于，在保持了一段时间的沉默之后，李世石的哥哥、去年的新人王李相勋三段也站了出来。李相勋愤然指出郑的行为已经对他们家人造成了伤害，“尽管他的出发点可能是好的，但在大多数人看来，郑显然是在滥用自己手中的权力来达到自己不可告人的目的”。</p>
 <p>　　李相勋还对郑容镇在那篇文章中引用日本棋手的例子感到不解。郑提到了一位已经退隐的日本九段棋手在其回忆录中说自己15岁那年挨了一位长者的一记耳光，那对自己以后的生活产生了很深的影响，事情的起因是他在前辈棋手复盘的过程中发表了自己的意见。于是，郑容镇便要效仿那位日本棋手也给李世石一记“耳光”。李相勋毫不客气地指出郑根本就没体会出打人者和被打者的真正意图和真正想法，他只是在按照自己的一相情愿去处理事情。</p>
 <p>　　就郑容镇提到的李世石的不懂礼貌等缺点，李相勋认为有些事情郑根本就不了解真相，只是凭借自己的主观感受便妄下结论，“即便弟弟真的做错了什么，但他还只有17岁，还没有成年，我不明白郑主编何以会对弟弟的人格作出那么恶劣的定断。”最后，作为兄长，李相勋希望弟弟能够以这次的风波为契机，逐步完善自己，成为一位真正的强者。</p>
 <p>　　李相勋的帖子一出，便招来了一片喝彩声。但更多的人则希望双方能够握手和解，既然郑主编是出于好意，而李世石的处事可能也有问题，再争吵下去似乎已经没有什么必要了。 </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=45802 target=_blank class=ltnn>韩国“克星”周鹤洋克“不败少年”之绝对谎言</a> (2/10/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=43391 target=_blank class=ltnn>LG杯：周鹤洋李昌镐可能狭路再相逢</a> (2/4/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=42930 target=_blank class=ltnn>二月份黑白世界好戏连台石佛可能再遇周鹤洋</a> (2/3/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=41655 target=_blank class=ltnn>中韩围棋新生代最强对抗中方两将信心不足</a> (1/31/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=35996 target=_blank class=ltnn>围棋博士与“不败少年”论围棋</a> (1/17/2001)<br />
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=45802" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">韩国“克星”周鹤洋克“不败少年”之绝对谎言</a> (2/10/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=43391" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">LG杯：周鹤洋李昌镐可能狭路再相逢</a> (2/4/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=42930" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">二月份黑白世界好戏连台石佛可能再遇周鹤洋</a> (2/3/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=41655" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">中韩围棋新生代最强对抗中方两将信心不足</a> (1/31/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35996" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">围棋博士与“不败少年”论围棋</a> (1/17/2001)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/17/n35996.md#1">围棋博士与“不败少年”论围棋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/31/n41655.md#1">中韩围棋新生代最强对抗中方两将信心不足</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/3/n42930.md#1">二月份黑白世界好戏连台石佛可能再遇周鹤洋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/2/4/n43391.md#1">LG杯：周鹤洋李昌镐可能狭路再相逢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/31/n11293194.md#1" target="_blank">【征文】章阁：荒谬的社会发展“五阶段论”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/11/8/n4291474.md#1" target="_blank">明慧网编辑与一名大陆“610”人员的对话</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/8/n14502333.md#1">宰相肚里能撑船——北宋贤相王旦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538781.md#1">【未解之谜】童言童语揭前世秘密 真相令人震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537972.md#1">旅美台湾画家张家玮的岛屿之梦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14541034.md#1">【时事金扫描】中国雇佣军再成乌克兰俘虏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541966.md#1">【直播】莱维特主持白宫简报会（6/30）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542367.md#1">【时事金扫描】习被架空 中共另立中央？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541180.md#1">上海干婚现象向全国蔓延 高压社会中的无奈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536697.md#1">TSA警告：勿将手机充电线插入机场USB充电</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540905.md#1">苗华免职涉习近平被削权？西方活动家关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540300.md#1">郑欣宜因伤退出《歌手2025》 网友呛节目组</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540561.md#1">《全知读者视角》揭秘幕后改编与拍摄过程</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541038.md#1">贝克汉姆紧急动手术 螺丝嵌入骨头超惊悚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14541022.md#1">癌症恶化至第四期 前港姐吴文忻惊爆离婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540672.md#1">第36届金曲奖完整得奖名单 李竺芯赢三大奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541283.md#1">为什么我们会爱上不爱我们的人？ 专家解析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541558.md#1">南海海槽强震倒数中？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536360.md#1">每日一颗巴西坚果 远离营养补充剂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535178.md#1">烤鱼加腌渍物致癌？营养师破解饮食禁忌迷思</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540120.md#1">如何处理继承的房产：自住 出租还是出售？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/2/12/n46503.htm">不败少年李世石惹争端</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/2/12/n46503.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
